--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "node": "^22.3.0",
     "server.js": "^1.0.0",
     "socket.io": "^4.7.5"
   },
