--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "mysql2": "^3.10.0",
     "node": "^22.3.0",
     "server.js": "^1.0.0",
     "socket.io": "^4.7.5"
