--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
+    "materialize-css": "^1.0.0-rc.2",
     "mysql2": "^3.10.0",
     "node": "^22.3.0",
     "server.js": "^1.0.0",
