--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "materialize-css": "^1.0.0-rc.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0",
     "node": "^22.3.0",
     "server.js": "^1.0.0",
